--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,7 @@
+[build]
+  [build.env]
+    NIXPACKS_NODE_VERSION = "20"
+
 [phases.setup]
 nixPkgs = ["nodejs_20", "yt-dlp", "ffmpeg"]
 
@@ -9,4 +13,5 @@ cmds = ["npm run build"]
 
 [start]
 cmd = "node dist/index.js"
+
 
