--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,5 @@
-[build]
-  [build.env]
-    NIXPACKS_NODE_VERSION = "20"
+[variables]
+NIXPACKS_NODE_VERSION = "20"
 
 [phases.setup]
 nixPkgs = ["nodejs_20", "yt-dlp", "ffmpeg"]
